[package]
edition="2024"
name   ="rep_grow"
version="0.1.0"

[lib]
name="_core"
# Build both cdylib for Python and rlib for Rust tests/tooling.
crate-type=["cdylib", "rlib"]

[dependencies]
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
once_cell="1.19"
pyo3     ={ version="0.27.1", features=["abi3-py39"] }
shakmaty ="0.27"

[features]
# Keep extension-module optional so cargo test can run without linking to libpython.
default         =["extension-module"]
extension-module=["pyo3/extension-module"]
