[package]
edition="2024"
name   ="rep_grow"
version="0.1.0"

[lib]
name="_core"
# Build both cdylib for Python and rlib for Rust tests/tooling.
crate-type=["cdylib", "rlib"]

[dependencies]
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
anyhow="1.0"
chrono={ version="0.4", features=["clock", "serde"] }
clap={ version="4.5", features=["derive"] }
once_cell="1.19"
pyo3={ version="0.27.1", features=["abi3-py39"] }
reqwest={ version="0.12", default-features=false, features=[
    "blocking",
    "json",
    "rustls-tls",
] }
serde={ version="1.0", features=["derive"] }
serde_json="1.0"
shakmaty="0.27"
toml="0.8"

[features]
# Keep extension-module optional so cargo test can run without linking to libpython.
default         =["extension-module"]
extension-module=["pyo3/extension-module"]

[dev-dependencies]
assert_cmd="2.0"
httpmock  ="0.7"
tempfile  ="3.12"
